# logistics-survey

./: readme.md
ankieta-backend/: .env  docker-compose.yaml  pyproject.toml
ankieta-backend/app/: main.py
ankieta-backend/app/api/: surveys.py
ankieta-backend/app/core/: database.py
ankieta-backend/app/models/: survey.py
ankieta-backend/app/services/: excel_parser.py  sync_service.py
ankieta-backend/backups/: ankieta_v1.json
ankieta-backend/inputs/: ankieta.xlsx
ankieta-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ankieta-frontend/public/: survey_schema.json
ankieta-frontend/src/: App.tsx
ankieta-frontend/src/components/: model.ts
ankieta-frontend/src/components/LogisticsSurvey/: LogisticsSurvey.tsx
ankieta-frontend/src/db/: db.ts
ankieta-frontend/src/theme/: index.css
